--- a/estilo.css
+++ b/estilo.css
@@ -3,32 +3,51 @@
     padding: 0px;
 }
 body{
-    background: lightgrey;
+    background-image: url("img/universitariadecolombia.jpg");
     font-family: Arial, Helvetica, sans-serif;
 
 }
 
 #container{
-    width: 1100px%;
-    margin:0px;
+    width: 10px%;
+    margin:40px;
     border: 1px solid black;
 }
+
 header{
-    background: white;
-    height: 100px;
+    display: flex;
+    
+    height: 150px;
     width: 100%;
     margin:0px;
     text-align: center;
-    line-height: 100px;
-    color: blue;
-    border-bottom: 3px dashed black;
-    
+    line-height: 200px;
+    color: black;
+align-items: flex-start;
+position:fixed;
+left: 0;
+top:0;
+right: 0;
 }
 
+.logo{
+    display: flex;
+    justify-content: space-between;
+    height: 200px;
+    
+    
+    
+}
+.main{
+    padding-top: 10rem;
+}
 nav{
+ 
     background: blue;
     height: 80px;
     border-bottom: black;
+    
+
 
    
 
@@ -36,12 +55,11 @@ nav{
 .nav-menu{
     display: inline-block;
     text-decoration: none;
-    background: white;
-    color:bisque;
+    color:black;
     padding: 10px 30px;
 }
 .nav-menu:hover{
-    background: black;
+    background: rgb(0, 247, 255);
 
 }
 nav ul li{
@@ -55,31 +73,34 @@ nav ul li{
 }
 
 .clearfix{
-    clear: both;
+    clear: both
    
     
 }
 #content{
     float:left;
-    width:80%;
+    width:70%;
     background: white;
-    min-height: 500px;
+    min-height: 300px;
 
 }
 .article{
+    float: left;
     color:black;
-    margin-top: 15px;
+    margin-top: 30px;
     margin-bottom: 15px;
     padding-bottom: 10px;
-    border-bottom: 1px solid #eee;
+    
     padding: 10px;
 }
 aside{
     float:left;
-    width:cal(20%-10px);
-    background:blue;
-    min-height: 500px;
+    width:cal(30%-10px);
+    background:yellow;
+    min-height: 280px;
     padding: 10px;
+    margin-bottom: 15px;
+  
     
 }
 footer{
@@ -88,4 +109,12 @@ footer{
     text-align: center;
     height: 100px;
     line-height: 100px;
+}
+#enlaces{
+    display: flex;
+    justify-content: space-between;
+    height: 100px;
+    background: blue;
+
+    
 }
