--- a/estilo.css
+++ b/estilo.css
@@ -16,6 +16,7 @@ body{
 
 header{
     display: flex;
+    background : blue;
     
     height: 150px;
     width: 100%;
@@ -28,6 +29,7 @@ position:fixed;
 left: 0;
 top:0;
 right: 0;
+
 }
 
 .logo{
